@@ -1,8 +1,8 @@
 /*
-	host_cmd.c
+	server/host_cmd.c
 	console commands
 
-	$Header: /cvsroot/uhexen2/engine/hexen2/server/host_cmd.c,v 1.49 2010-03-09 15:00:27 sezero Exp $
+	$Id$
 */
 
 #include "q_stdinc.h"
@@ -1027,6 +1027,36 @@ static int LoadGamestate (const char *level, const char *startspot, int ClientsM
 			// link it into the bsp tree
 			if (!ent->free)
 			{
+				if (entnum >= sv.num_edicts)
+				{
+				/* This is necessary to restore "generated" edicts which were
+				 * not available during the map parsing by ED_LoadFromFile().
+				 * This includes items dropped by monsters, items "dropped" by
+				 * an item_spawner such as the "prizes" in the Temple of Mars
+				 * (romeric5), a health sphere generated by the Crusader's
+				 * Holy Strength ability, or a respawning-candidate killed
+				 * monster in the expansion pack's nightmare mode. -- THOMAS */
+				/* Moved this into the if (!ent->free) construct: less debug
+				 * chatter.  Even if this skips a free edict in between, the
+				 * skipped free edict wasn't parsed by ED_LoadFromFile() and
+				 * it will remain as a freed edict. (There is no harm because
+				 * we are dealing with extra edicts not originally present in
+				 * the map.)  -- O.S. */
+					Con_DPrintf("%s: entnum %d >= sv.num_edicts (%d)\n",
+							__thisfunc__, entnum, sv.num_edicts);
+					if (entnum < MAX_EDICTS)
+					{
+						sv.num_edicts = entnum + 1;
+					}
+					else
+					{
+					/* if we reach here, it can only mean trouble: the
+					 * saved game is either incompatible or corrupt. */
+						Con_DPrintf("%s: entity %d NOT restored!\n",
+									__thisfunc__, entnum);
+					}
+				}
+
 				SV_LinkEdict (ent, false);
 				if (ent->v.modelindex && ent->v.model)
 				{
