@@ -4,6 +4,17 @@ Development Progress	:
 ---------------------------
 
 2011-06-18 (SVN):
+    * host_cmd.c (LoadGamestate): When loading a saved game, restore the
+      extra edicts that were created during game play. The generated
+      edicts are not available during the map parsing by ED_LoadFromFile
+      and lost upon reloading. This includes items dropped by monsters,
+      items "dropped" by an item_spawner such as the prizes in the Temple
+      of Mars (romeric5), health spheres generated by the Crusader's Holy
+      Strength ability, or a respawning-candidate killed monster in the
+      expansion pack's nightmare mode. Issue analyzed by Thomas Freundt.
+      Issue was in original hexen2 source. Closes/fixes bug 3287803.
+
+2011-06-18 (SVN):
     * hexen2/server/host_cmd.c (Host_Say_f, Host_Tell_f): Remove trailing
       quote only if it is present. Adjustments, mostly inspired from the
       darkplaces engine. (Change from 2010-08-31 rev. 3729 missed hitting
